Issue #SB-13330 fix:Card alignment on role selection page

--- a/src/app/user-type-selection/user-type-selection.scss
+++ b/src/app/user-type-selection/user-type-selection.scss
@@ -6,6 +6,8 @@
     border-style: solid;
     border-width: 2px;
     border-radius: 6px !important;
+    margin-inline-start: unset !important;
+    margin-inline-end: unset !important;
   }
 
   .description {
